Fix for text in the background-section appearing too large on mobile devices

--- a/src/app/components/background/background.component.scss
+++ b/src/app/components/background/background.component.scss
@@ -49,4 +49,8 @@
     .logo-container {
       border-right: none;
     }
+
+    .background-Text {
+      font-size: initial;
+    }
   }
